cmake_minimum_required(VERSION 3.15)
project(Practise C)
set(CMAKE_C_STANDARD 99)

message(status   "this is BINARY dir" ${PROJECT_BINARY_DIR})
MESSAGE(status  "this is SOURCE" ${PROJECT_SOURCE_DIR})
#add_executable(Practise src/FileOperate.c)
#ADD_EXECUTABLE(memory src/Memory.c)
#ADD_EXECUTABLE(PointerType src/PointerType.c)
#ADD_EXECUTABLE(arrayAndPointer src/ArrayAndPointer.c)
#ADD_EXECUTABLE(twoDimension src/TwoDimension.c)
#ADD_EXECUTABLE(FunctionPointer src/FunctionPointer.c)
#ADD_EXECUTABLE(Dynamic src/Dynamic.c)
ADD_EXECUTABLE(DynamicMemoryAllocation src/DynamicMemoryAllocation.c)